<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".methodstypesactivities.integralsolvingmethods.InputIntegralDataActivity">


    <LinearLayout
        android:id="@+id/integralDataSetup_VerticalLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chosenMethod_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/functionInput_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Enter the function: " />

        <EditText
            android:id="@+id/function_EditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="7 * cos*(x + 5) - log10(x) - sqrt(x)" />


        <TextView
            android:id="@+id/chooseEps_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Choose eps-precision: " />

        <LinearLayout
            android:id="@+id/chooseEps_LinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/eps_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:hint="eps"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/useMachineEps_CheckBox"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:text="use machine eps (max precision)" />

        </LinearLayout>

        <TextView
            android:id="@+id/chooseIntegralInterval_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Choose integral interval: " />

        <LinearLayout
            android:id="@+id/integralIntervalSetupSection_LinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interval start: " />

                <EditText
                    android:id="@+id/intervalStart_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="a"
                    android:inputType="numberSigned|numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interval end: " />

                <EditText
                    android:id="@+id/intervalEnd_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="b"
                    android:inputType="numberSigned|numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/formFullSolution_CheckBox"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="form full solution" />

            <Button
                android:id="@+id/solveIntegral_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="solve integral" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>