...

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/solution_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="700dp"/>

        </HorizontalScrollView>

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Scale: 0" />

        <SeekBar
            android:id="@+id/textScale_SeekBar"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:max="100"
            android:progress="4" />

...
