<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/mainActivity_IntegralMethods_Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Integral methods" />

        <Button
            android:id="@+id/mainActivity_SystemSolvingMethods_Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="System solving methods" />

        <Button
            android:id="@+id/mainActivity_OptimizationMethods_Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Optimization methods" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>