<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".methodstypesactivities.IntegralMethodsActivity">

    <TextView
        android:id="@+id/chooseMethodName_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="Choose the method:"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseMethodName_TextView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/rectangleMethodInfo_Button"
                android:layout_width="36dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_help" />

            <Button
                android:id="@+id/rectangleMethod_Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Rectangle method" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/trapezoidMethodInfo_Button"
                android:layout_width="36dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_help" />

            <Button
                android:id="@+id/trapezoidMethod_Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Trapezoid method" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/simpsonMethodInfo_Button"
                android:layout_width="36dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_help" />

            <Button
                android:id="@+id/simpsonMethod_Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Simpson method" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>