<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".methodstypesactivities.MethodInfoActivity">

    <TextView
        android:id="@+id/methodDescriptionTitle_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="Method description:"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/vertical_ScrollView"
        android:layout_width="340dp"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/methodDescriptionTitle_TextView">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/description_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="340dp"/>

        </HorizontalScrollView>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/vertical_ScrollView">

        <TextView
            android:id="@+id/textScale_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Scale: 0" />

        <SeekBar
            android:id="@+id/textScale_SeekBar"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:max="100"
            android:progress="4" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>